--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Hello world</title>
     <!-- <script defer src="variable.js"></script> -->
     <!-- <script defer src="operator.js"></script> -->
-    <script defer src="function.js"></script>
-
-
+    <!-- <script defer src="function.js"></script> -->
+    <script defer src="class.js"></script>
 </head>
 <body>
     
